--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "body-parser": "^1.20.3",
         "cookie-parser": "^1.4.7",
         "express": "^4.21.1",
-        "morgan": "^1.10.0"
+        "generic-pool": "^3.9.0",
+        "merger": "^0.0.4",
+        "morgan": "^1.10.0",
+        "mysql2": "^3.11.4"
     },
     "scripts": {
         "start": "node ./bin/happyLifeServer"
