--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "generic-pool": "^3.9.0",
         "merger": "^0.0.4",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "mysql2": "^3.11.4"
     },
     "scripts": {
